Moved all css to main.scss. Created a header and footer template. Added fontawesome. Added pictures to image folder

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
     background-color: #200c60;
 }
 .footer {
-    background-color: #836fbe; /*#351c7a; */
+    background-color: rgb(73, 47, 148); /*#351c7a; */
     width: 100%;
     position: fixed;
     bottom: 0px;
