--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 .whitetext {
     color: white;
 }
-.fuck *, .jumbotron * {
+.frame *, .jumbotron * {
     text-align: center;
     margin: 0 auto;
 }
@@ -104,7 +104,7 @@ body {
   <p>Earn rewards from your employer by recording your healthy choices and activities every day!</p> 
 </div>
 
-<div class="fuck">
+<div class="frame">
     <div class="form-group">
         <h2> Sign In </h2>
         <br/>
