--- a/profile.html
+++ b/profile.html
@@ -50,7 +50,7 @@ body {
 .whitetext {
     color: white;
 }
-.fuck *, .jumbotron * {
+.frame *, .jumbotron * {
     text-align: center;
     margin: 0 auto;
 }
