--- a/stats.html
+++ b/stats.html
@@ -29,7 +29,7 @@ body {
 .whitetext {
     color: white;
 }
-.fuck *, .jumbotron * {
+.frame *, .jumbotron * {
     text-align: center;
     margin: 0 auto;
 }
